[gd_scene load_steps=22 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/map/green_tileset.png" type="Texture" id=2]
[ext_resource path="res://Unit.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/map/selection_tile/selection_tile.tres" type="Texture" id=4]
[ext_resource path="res://assets/map/cursor/cursor.tres" type="Texture" id=5]
[ext_resource path="res://CursorTileMap.gd" type="Script" id=6]
[ext_resource path="res://assets/map/arrows.png" type="Texture" id=7]
[ext_resource path="res://PathTileMap.gd" type="Script" id=8]
[ext_resource path="res://assets/map/reticle/reticle.tres" type="Texture" id=9]
[ext_resource path="res://assets/gui/gui_theme.tres" type="Theme" id=10]
[ext_resource path="res://assets/map/building_tileset.png" type="Texture" id=11]
[ext_resource path="res://ui/ActionMenu.gd" type="Script" id=12]
[ext_resource path="res://assets/map/selection_tile/selection_tile_red.tres" type="Texture" id=13]
[ext_resource path="res://AI.gd" type="Script" id=14]
[ext_resource path="res://ui/StatusMenu.gd" type="Script" id=15]
[ext_resource path="res://ui/BuildingMenu.gd" type="Script" id=16]
[ext_resource path="res://Building.gd" type="Script" id=17]

[sub_resource type="TileSet" id=1]
0/name = "green_tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 24, 24 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "green_tileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 24, 0, 24, 24 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "green_tileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 48, 0, 24, 24 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "green_tileset.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 72, 0, 24, 24 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "green_tileset.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 96, 0, 24, 24 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "arrows.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 72 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 16, Vector2( 0, 1 ), 176, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 152, Vector2( 1, 2 ), 26, Vector2( 2, 0 ), 146, Vector2( 2, 1 ), 144, Vector2( 2, 2 ), 18, Vector2( 3, 1 ), 24, Vector2( 3, 2 ), 48 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 24, 24 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "selection_tile.tres 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 24, 24 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "selection_tile_red.tres 1"
1/texture = ExtResource( 13 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 24, 24 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "cursor.tres 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 28, 28 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "reticle.tres 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="TerrainTileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 24, 24 )
cell_quadrant_size = 6
cell_custom_transform = Transform2D( 24, 0, 0, 24, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 2, 0, 5, 3, 0, 6, 0, 0, 7, 0, 0, 8, 2, 0, 9, 3, 0, 10, 0, 0, 11, 0, 0, 12, 2, 0, 13, 3, 0, 65536, 0, 0, 65537, 0, 0, 65538, 2, 0, 65539, 3, 0, 65540, 1, 0, 65541, 1, 0, 65542, 0, 0, 65543, 2, 0, 65544, 2, 0, 65545, 3, 0, 65546, 0, 0, 65547, 0, 0, 65548, 2, 0, 65549, 3, 0, 131072, 1, 0, 131073, 2, 0, 131074, 3, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 2, 0, 131080, 2, 0, 131081, 3, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 1, 0, 196611, 1, 0, 196612, 0, 0, 196613, 0, 0, 196614, 1, 0, 196615, 2, 0, 196616, 3, 0, 196617, 1, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 262144, 0, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 0, 0, 262149, 1, 0, 262150, 1, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 2, 0, 262157, 3, 0, 327680, 0, 0, 327681, 0, 0, 327682, 1, 0, 327683, 1, 0, 327684, 0, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 2, 0, 327693, 3, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 1, 0, 393221, 2, 0, 393222, 3, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 2, 0, 458757, 3, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 1, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 1, 0, 524298, 2, 0, 524299, 3, 0, 524300, 0, 0, 524301, 1, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 1, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 0, 0, 589837, 1, 0, 655360, 2, 0, 655361, 3, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 2, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 1, 0, 655373, 0, 0 )

[node name="BuildingsTileMap" type="TileMap" parent="."]
cell_size = Vector2( 24, 24 )
cell_quadrant_size = 6
cell_custom_transform = Transform2D( 24, 0, 0, 24, 0, 0 )
format = 1

[node name="Building" type="Sprite" parent="BuildingsTileMap"]
position = Vector2( 24, 192 )
texture = ExtResource( 11 )
centered = false
vframes = 2
hframes = 4
frame = 2
script = ExtResource( 17 )

[node name="Building2" type="Sprite" parent="BuildingsTileMap"]
position = Vector2( 168, 96 )
texture = ExtResource( 11 )
centered = false
vframes = 2
hframes = 4
frame = 2
script = ExtResource( 17 )

[node name="Building3" type="Sprite" parent="BuildingsTileMap"]
position = Vector2( 96, 96 )
texture = ExtResource( 11 )
centered = false
vframes = 2
hframes = 4
frame = 2
script = ExtResource( 17 )

[node name="Building4" type="Sprite" parent="BuildingsTileMap"]
position = Vector2( 168, 192 )
texture = ExtResource( 11 )
centered = false
vframes = 2
hframes = 4
frame = 4
script = ExtResource( 17 )

[node name="PathTileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 24, 24 )
cell_quadrant_size = 6
cell_custom_transform = Transform2D( 24, 0, 0, 24, 0, 0 )
format = 1
script = ExtResource( 8 )

[node name="SelectionTileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 24, 24 )
cell_quadrant_size = 6
cell_custom_transform = Transform2D( 24, 0, 0, 24, 0, 0 )
centered_textures = true
format = 1

[node name="Unit" parent="SelectionTileMap" instance=ExtResource( 3 )]
position = Vector2( 96, 72 )

[node name="Unit2" parent="SelectionTileMap" instance=ExtResource( 3 )]
position = Vector2( 48, 72 )

[node name="Unit3" parent="SelectionTileMap" instance=ExtResource( 3 )]
position = Vector2( 48, 144 )

[node name="Unit4" parent="SelectionTileMap" instance=ExtResource( 3 )]
position = Vector2( 120, 120 )

[node name="Unit5" parent="SelectionTileMap" instance=ExtResource( 3 )]
position = Vector2( 72, 120 )

[node name="Unit6" parent="SelectionTileMap" instance=ExtResource( 3 )]
position = Vector2( 144, 168 )

[node name="Unit7" parent="SelectionTileMap" instance=ExtResource( 3 )]
position = Vector2( 264, 48 )

[node name="Unit8" parent="SelectionTileMap" instance=ExtResource( 3 )]
position = Vector2( 264, 144 )

[node name="CursorTileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 24, 24 )
cell_quadrant_size = 6
cell_custom_transform = Transform2D( 24, 0, 0, 24, 0, 0 )
centered_textures = true
format = 1
script = ExtResource( 6 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GUIContainer" type="Control" parent="GUI"]
visible = false
anchor_right = 0.35
anchor_bottom = 0.489
margin_right = -3.05176e-05
margin_bottom = -0.0599976
mouse_filter = 2
theme = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionMenu" type="PopupMenu" parent="GUI/GUIContainer"]
margin_right = 66.0
margin_bottom = 40.0
mouse_filter = 1
mouse_default_cursor_shape = 2
hide_on_checkable_item_selection = false
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusMenu" type="PopupMenu" parent="GUI/GUIContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_right = -144.0
margin_bottom = 52.0
mouse_filter = 1
mouse_default_cursor_shape = 2
items = [ "Status", null, 0, false, false, 0, 0, null, "", false, "End Turn", null, 0, false, false, 1, 0, null, "", false ]
hide_on_checkable_item_selection = false
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingMenu" type="PopupMenu" parent="GUI/GUIContainer"]
margin_right = 8.0
margin_bottom = 8.0
script = ExtResource( 16 )

[node name="AI" type="Node" parent="."]
script = ExtResource( 14 )
